# paperclip-orchestration

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: config.py  health.py  logging_config.py  main.py  middleware.py  models.py  repository.py  service.py
paperclip_orchestration.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  test_api.py  test_config.py  test_health.py  test_logging_config.py  test_middleware.py  test_repository.py
